# PixelDoodler

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pixeldoodler/: __init__.py  gui.py
src/pixeldoodler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
